terraform_files/internet-gateway.tf
resource "aws_internet_gateway" "igw1" {
  vpc_id = aws_vpc.vpc1.id
  tags = {
    Name = "internet_gateway"
  }
}
